# core-libs-python

./: README.md
pkg-logger/: README.md  pyproject.toml
pkg-logger/src/outamation_pkg_logger/: README.md  __init__.py
pkg-postgres/: README.md  pyproject.toml
pkg-postgres/src/outamation_pkg_postgres/: __init__.py
pkg-rabbitmq/: README.md  pyproject.toml
pkg-rabbitmq/src/outamation_pkg_rabbitmq/: __init__.py
pkg-sftp/: README.md  pyproject.toml
pkg-sftp/src/outamation_pkg_sftp/: __init__.py
