[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outamation_pkg_logger"
version = "0.1.0"
description = "A lightweight logging utility package for Outamation projects, built on Loguru."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]

# Core runtime dependencies for the logger package.
dependencies = [
    "loguru>=0.7.0"
]

[project.urls]
Homepage = "https://github.com/outamation/core-libs-python"
Repository = "https://github.com/outamation/core-libs-python/tree/main/pkg-logger"

[tool.setuptools.packages.find]
where = ["src"]  # Look for the source code in the 'src' directory