[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outamation_pkg_sftp"
version = "0.1.0"
description = "A robust asynchronous SFTP client utility package built on Paramiko for Outamation projects."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core runtime dependencies for the SFTP package
dependencies = [
    "paramiko==3.0.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "outamation_pkg_logger",
]

[project.urls]
Homepage = "https://github.com/outamation/core-libs-python"
Repository = "https://github.com/outamation/core-libs-python/tree/main/pkg-sftp"

[tool.setuptools.packages.find]
where = ["src"]  # Look for the source code in the 'src' directory
